# src/app.ts
@@ -79,6 +79,7 @@ import dealerRoutes from './modules/dealers/dealers.routes';
 import authRoutes from './modules/auth/auth.routes';
 import analyticsRoutes from './modules/analytics/analytics.routes';
 import ordersRoutes from './modules/orders/orders.routes';
+import appointmentsRoutes from './modules/appointments/appointments.routes';
 
 const app: Application = express();
 app.use(helmet({
@@ -109,6 +110,7 @@ app.use('/l', analyticsRoutes);
 app.use('/api/v1/dealers', dealerRoutes);
 app.use('/api/v1/auth', authRoutes);
 app.use('/api/v1/orders', ordersRoutes);
+app.use('/api/v1/appointments', appointmentsRoutes); 
 
 // 404 Handler
 app.use((req: Request, res: Response) => {
